--- a/about.html
+++ b/about.html
@@ -243,6 +243,20 @@
                             <br>
                         </a>
                     </div>
+                    <div class="subd_a" style="width: 200;">
+                        <a href="https://github.com/lovefc/china_school_badge" target="_blank">
+                            <h2>china_school_badge</h2>
+                            <svg  width="80"  height="80" viewBox="0 0 21.166666 21.166666"  version="1.1"  id="svg1"  xmlns="http://www.w3.org/2000/svg"  xmlns:svg="http://www.w3.org/2000/svg">
+                                <defs id="defs1" />
+                                <g id="layer1">
+                                    <rect style="fill:none;stroke:var(--text-color);stroke-width:0.770865;stroke-linejoin:round;stroke-miterlimit:4.1;stroke-dasharray:none;stroke-opacity:1" id="rect1" width="20.395802" height="20.395802" x="0.38543248" y="0.38543248" />
+                                  <text xml:space="preserve" style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:4.23333px;line-height:0.8;font-family:'Segoe Script';-inkscape-font-specification:'Segoe Script';text-align:start;writing-mode:lr-tb;direction:ltr;text-anchor:start;white-space:pre;inline-size:14.646;fill:var(--text-color);fill-opacity:1;stroke:var(--text-color);stroke-width:2e-08;stroke-linejoin:round;stroke-miterlimit:4.1;stroke-dasharray:none;stroke-opacity:1" x="7.5137444" y="12.601792" id="text1" transform="matrix(1.2594303,0,0,1.2942376,-6.910832,-3.8376463)"><tspan x="7.5137444"  y="12.601792" id="tspan2">无图标</tspan></text>
+                                </g>
+                              </svg>    
+                            <p>各高校矢量图标</p>
+                            <br>
+                        </a>
+                    </div>
                 </div>
             </div>
             <br style="height: 20;">
