--- a/about.html
+++ b/about.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" async href="/css/style.css">
     <style>
         .aa {
+            margin: 2;
+            padding: 2;
             display: inline-block;
-            border: 1px solid #6b6b6b;
+            background-color: var(--nav-bg-color);
         }
 
         .aa :hover {
@@ -26,7 +28,7 @@
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
                     <a href="index.html" target="_top">
-                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico" id="web-icon">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
@@ -197,6 +199,7 @@
                     <a href="https://www.vexflow.com/" class="aa" target="_blank">VexFlow</a>
                     <a href="https://github.com/mudcube/MIDI.js" class="aa" target="_blank">MIDI.js</a>
                     <a href="https://notation.sparkslab.art/" class="aa" target="_blank">Spark NMN</a>
+                    <a href="https://xiaohui.lovefc.cn/" class="aa" target="_blank">高校校徽</a>
                     
                 </div>
             </div>
