--- a/history/index.html
+++ b/history/index.html
@@ -17,7 +17,7 @@
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
                     <a href="index.html" target="_top">
-                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico" id="web-icon">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
@@ -85,6 +85,7 @@
             <div style="width: 1080;;margin: auto;background-color: var(--div-bg-color);" class="center">
                 <div style="float: left;border-left: var(--solid-border)">
                     <h1 style="position: relative;left: 20;">历史页面跳转临时页面</h1>
+                    <!--<p>注意，需要权限</p>-->
                 </div>
                 <br><br><br>
                 <p style="font-size: 20;">请检查参数，如果参数在范围内将自动跳转至对应页面</p>
@@ -143,7 +144,7 @@
         </div>
     </div>
     <script src="/js/script.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
