--- a/protect/alls.html
+++ b/protect/alls.html
@@ -17,7 +17,7 @@
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
                     <a href="/index.html" target="_top">
-                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                        <img src="/assets/images/2024547.jpg" style="width:60px;height:60px;" class="ico" id="web-icon">
                     </a>
                 </div>
                 <div style="height:60px;float:left;">
